# bert-wasm

./: README.md  package-lock.json  package.json  webpack.config.js
maskedlm/: .gitignore  Cargo.toml
maskedlm/src/: lib.rs
src/: index.html  index.ts
