[package]
name = "maskedlm"
version = "0.1.0"
authors = ["ryuichit <ryuichi.tanimoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = "0.10.1"
tract-onnx = "0.15.2"
wasm-bindgen = "0.2.74"

[lib]
crate-type = ["cdylib"]

#lib.rsのmain関数を実行する場合
#[[bin]]
#name = "main1"
#path = "src/lib.rs"
